horizontal overflow/scroll fix

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,11 @@ body {
     text-align: center;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .container{
     display: block;
     margin-left: auto;
